[package]
name = "hands-on-rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.5.0"
fastrand = "1.5.0"
anyhow = "1.0.43"
bevy_egui = "0.7.0"
puffin_egui = "0.8.0"
puffin = "0.9.0"
bevy_ecs_tilemap = { git = "https://github.com/StarArawn/bevy_ecs_tilemap.git/" }

[dev-dependencies]
ntest = "0.7.3"

# [patch.crates-io]
# bevy = { git = "https://github.com/bevyengine/bevy", branch = "main" }
