[package]
name = "hands-on-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
bevy = { git = "https://github.com/bevyengine/bevy", rev = "1d0d8a3397bd6fc2c14d42ffd0668d2443748912" }
# bevy_egui = { path = "../bevy_egui" }
bevy_ecs_tilemap = { git = "https://github.com/StarArawn/bevy_ecs_tilemap.git/" }
fastrand = "1.6.0"
# puffin = "0.12.1"
# puffin_egui = "0.11.0"

[dev-dependencies]
ntest = "0.7.3"

[patch.crates-io]
bevy = { git = "https://github.com/bevyengine/bevy" }
