[package]
name = "hands-on-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
bevy = "0.6"
# bevy_egui = { path = "../bevy_egui" }
bevy_ecs_tilemap = { git = "https://github.com/StarArawn/bevy_ecs_tilemap.git", rev = "127759b" }
fastrand = "1.6.0"
# puffin = "0.12.1"
# puffin_egui = "0.11.0"

[dev-dependencies]
ntest = "0.7.3"
